--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "repository": "/mdd-blog",
   "scripts": {
-    "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "dev": "vuepress dev blog",
+    "build": "vuepress build blog"
   },
   "license": "MIT",
   "devDependencies": {
