--- a/docs/package.json
+++ b/docs/package.json
@@ -9,12 +9,15 @@
   },
   "repository": "/mdd-blog",
   "scripts": {
-    "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "dev": "vuepress dev",
+    "build": "vuepress build"
   },
   "license": "MIT",
   "devDependencies": {
     "@vuepress/theme-blog": "^2.3.3",
-    "vuepress": "^1.5.3"
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
+    "vuepress": "^1.5.3",
+    "vuepress-theme-simple": "^1.1.2"
   }
 }
