--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+_blog
+.git
+DailyIntegration
 pids
 logs
 node_modules
@@ -10,3 +13,6 @@ dist
 .basement
 config.local.js
 basement_dist
+maquette.sketch
+blog-mdd.pdf
+blog-mdd.jpg
